# annotated-tfs

./: .gitignore  CMakeLists.txt  README.md
import/: PublicDefine.h  Service.cpp  bytebuffer.h  channelpool.cpp  channelpool.h  connection.cpp  connection.h  databuffer.h  defaultrunnable.cpp  defaultrunnable.h  fileutil.cpp  ipackethandler.h  iserveradapter.h  packetqueuethread.cpp  profiler.h  runnable.h  socket.cpp  socket.h  socketevent.h  stringutil.h  tblog.cpp  tblog.h  tbnet.h  tbtimeutil.h  tcpcomponent.cpp  tcpconnection.cpp  thread.h  threadmutex.h  transport.cpp  transport.h
src/adminserver/: adminserver.cpp  adminserver.h
src/client/: fsname.cpp  fsname.h  lru.h  tfs_client_api.cpp  tfs_client_api.h  tfs_client_metrics.h  tfs_file.cpp  tfs_file.h  tfs_session.cpp  tfs_session.h  tfs_session_pool.cpp  tfs_session_pool.h
src/common/: config.cpp  config.h  config_item.h  define.h  directory_op.cpp  directory_op.h  error_msg.h  file_queue.cpp  file_queue.h  file_queue_thread.cpp  file_queue_thread.h  func.cpp  func.h  interval.h  lock.cpp  lock.h  parameter.cpp  parameter.h
src/dataserver/: bit_map.cpp  bit_map.h  block_checker.cpp  block_checker.h  block_status.h  blockfile_format.h  blockfile_manager.cpp  blockfile_manager.h  compact_block.cpp  compact_block.h  cpu_metrics.cpp  cpu_metrics.h  data_file.cpp  data_file.h  data_handle.cpp  data_handle.h  data_management.cpp  data_management.h  dataserver.cpp  dataserver.h  dataserver_define.h  dataservice.cpp  dataservice.h  file_op.cpp  file_op.h  file_repair.cpp  file_repair.h  index_handle.cpp  index_handle.h  logic_block.cpp  logic_block.h  mmap_file.cpp  mmap_file.h  mmap_file_op.cpp  mmap_file_op.h  physical_block.cpp  physical_block.h  replicate_block.cpp  replicate_block.h  requester.cpp  (+12 more)
src/message/: admin_cmd_message.cpp  admin_cmd_message.h  async_client.cpp  async_client.h  block_info_message.cpp  block_info_message.h  client.cpp  client.h  client_cmd_message.cpp  client_cmd_message.h  client_pool.cpp  client_pool.h  close_file_message.cpp  close_file_message.h  compact_block_message.cpp  compact_block_message.h  crc_error_message.cpp  crc_error_message.h  create_filename_message.cpp  create_filename_message.h  dataserver_message.cpp  dataserver_message.h  file_info_message.cpp  file_info_message.h  heart_message.cpp  heart_message.h  message.h  message_factory.cpp  message_factory.h  oplog_sync_message.cpp  oplog_sync_message.h  read_data_message.cpp  read_data_message.h  reload_message.cpp  reload_message.h  rename_file_message.cpp  rename_file_message.h  replicate_block_message.cpp  replicate_block_message.h  rollback_message.cpp  (+13 more)
src/monitor/: cibrsc.xml  nameserver_ha_monitor.cpp
src/nameserver/: block_chunk.cpp  block_chunk.h  block_collect.h  compact.cpp  compact.h  data_container.h  file_system_image.cpp  file_system_image.h  heart_manager.cpp  heart_manager.h  layout_manager.cpp  layout_manager.h  lease_clerk.cpp  lease_clerk.h  meta_manager.cpp  meta_manager.h  meta_scanner.h  nameserver.cpp  nameserver.h  ns_define.h  oplog.cpp  oplog.h  oplog_sync_manager.cpp  oplog_sync_manager.h  proactor_data_pipe.h  redundant.cpp  redundant.h  replicate.cpp  replicate.h  scanner_manager.cpp  scanner_manager.h  server_collect.h  service.cpp  service.h  strategy.cpp  strategy.h
src/tools/adminserver/: admintool.cpp
src/tools/dataserver/: clear_file_system.cpp  convert_name.cpp  ds_client.cpp  ds_lib.cpp  ds_lib.h  ds_task.cpp  ds_task.h  ds_util.cpp  ds_util.h  format_file_system.cpp  modify_super_block.cpp  read_index_tool.cpp  read_super_block.cpp  reloadconfig.cpp  replblk.cpp  reverse_name.cpp  stat.cpp  stat.h  tfsping.cpp
src/tools/nameserver/: showssm.cpp  showsyncoplog.cpp  tfstool.cpp
tests/batch/: test_batch_mix.cpp  test_batch_read.cpp  test_batch_write.cpp  util.cpp  util.h
tests/client/: test_fsname.cpp
tests/dataserver/: test_blockfile_manager.cpp  test_logic_block_and_compact.cpp
