cmake_minimum_required(VERSION 3.7)
project(annotated_tfs)

set(CMAKE_CXX_STANDARD 11)

include_directories(src)

set(SOURCE_FILES
        src/adminserver/adminserver.cpp
        src/adminserver/adminserver.h
        src/client/fsname.cpp
        src/client/fsname.h
        src/client/lru.h
        src/client/tfs_client_api.cpp
        src/client/tfs_client_api.h
        src/client/tfs_client_metrics.h
        src/client/tfs_file.cpp
        src/client/tfs_file.h
        src/client/tfs_session.cpp
        src/client/tfs_session.h
        src/client/tfs_session_pool.cpp
        src/client/tfs_session_pool.h
        src/common/config.cpp
        src/common/config.h
        src/common/config_item.h
        src/common/define.h
        src/common/directory_op.cpp
        src/common/directory_op.h
        src/common/error_msg.h
        src/common/file_queue.cpp
        src/common/file_queue.h
        src/common/file_queue_thread.cpp
        src/common/file_queue_thread.h
        src/common/func.cpp
        src/common/func.h
        src/common/interval.h
        src/common/lock.cpp
        src/common/lock.h
        src/common/parameter.cpp
        src/common/parameter.h
        src/dataserver/bit_map.cpp
        src/dataserver/bit_map.h
        src/dataserver/block_checker.cpp
        src/dataserver/block_checker.h
        src/dataserver/block_status.h
        src/dataserver/blockfile_format.h
        src/dataserver/blockfile_manager.cpp
        src/dataserver/blockfile_manager.h
        src/dataserver/compact_block.cpp
        src/dataserver/compact_block.h
        src/dataserver/cpu_metrics.cpp
        src/dataserver/cpu_metrics.h
        src/dataserver/data_file.cpp
        src/dataserver/data_file.h
        src/dataserver/data_handle.cpp
        src/dataserver/data_handle.h
        src/dataserver/data_management.cpp
        src/dataserver/data_management.h
        src/dataserver/dataserver.cpp
        src/dataserver/dataserver.h
        src/dataserver/dataserver_define.h
        src/dataserver/dataservice.cpp
        src/dataserver/dataservice.h
        src/dataserver/file_op.cpp
        src/dataserver/file_op.h
        src/dataserver/file_repair.cpp
        src/dataserver/file_repair.h
        src/dataserver/index_handle.cpp
        src/dataserver/index_handle.h
        src/dataserver/logic_block.cpp
        src/dataserver/logic_block.h
        src/dataserver/mmap_file.cpp
        src/dataserver/mmap_file.h
        src/dataserver/mmap_file_op.cpp
        src/dataserver/mmap_file_op.h
        src/dataserver/physical_block.cpp
        src/dataserver/physical_block.h
        src/dataserver/replicate_block.cpp
        src/dataserver/replicate_block.h
        src/dataserver/requester.cpp
        src/dataserver/requester.h
        src/dataserver/superblock.h
        src/dataserver/superblock_impl.cpp
        src/dataserver/superblock_impl.h
        src/dataserver/sync_backup.cpp
        src/dataserver/sync_backup.h
        src/dataserver/sync_base.cpp
        src/dataserver/sync_base.h
        src/dataserver/version.cpp
        src/dataserver/version.h
        src/dataserver/visit_stat.cpp
        src/dataserver/visit_stat.h
        src/message/admin_cmd_message.cpp
        src/message/admin_cmd_message.h
        src/message/async_client.cpp
        src/message/async_client.h
        src/message/block_info_message.cpp
        src/message/block_info_message.h
        src/message/client.cpp
        src/message/client.h
        src/message/client_cmd_message.cpp
        src/message/client_cmd_message.h
        src/message/client_pool.cpp
        src/message/client_pool.h
        src/message/close_file_message.cpp
        src/message/close_file_message.h
        src/message/compact_block_message.cpp
        src/message/compact_block_message.h
        src/message/crc_error_message.cpp
        src/message/crc_error_message.h
        src/message/create_filename_message.cpp
        src/message/create_filename_message.h
        src/message/dataserver_message.cpp
        src/message/dataserver_message.h
        src/message/file_info_message.cpp
        src/message/file_info_message.h
        src/message/heart_message.cpp
        src/message/heart_message.h
        src/message/message.h
        src/message/message_factory.cpp
        src/message/message_factory.h
        src/message/oplog_sync_message.cpp
        src/message/oplog_sync_message.h
        src/message/read_data_message.cpp
        src/message/read_data_message.h
        src/message/reload_message.cpp
        src/message/reload_message.h
        src/message/rename_file_message.cpp
        src/message/rename_file_message.h
        src/message/replicate_block_message.cpp
        src/message/replicate_block_message.h
        src/message/rollback_message.cpp
        src/message/rollback_message.h
        src/message/server_meta_info_message.cpp
        src/message/server_meta_info_message.h
        src/message/server_status_message.cpp
        src/message/server_status_message.h
        src/message/status_message.cpp
        src/message/status_message.h
        src/message/tfs_packet_streamer.cpp
        src/message/tfs_packet_streamer.h
        src/message/unlink_file_message.cpp
        src/message/unlink_file_message.h
        src/message/write_data_message.cpp
        src/message/write_data_message.h
        src/monitor/nameserver_ha_monitor.cpp
        src/nameserver/block_chunk.cpp
        src/nameserver/block_chunk.h
        src/nameserver/block_collect.h
        src/nameserver/compact.cpp
        src/nameserver/compact.h
        src/nameserver/data_container.h
        src/nameserver/file_system_image.cpp
        src/nameserver/file_system_image.h
        src/nameserver/heart_manager.cpp
        src/nameserver/heart_manager.h
        src/nameserver/layout_manager.cpp
        src/nameserver/layout_manager.h
        src/nameserver/lease_clerk.cpp
        src/nameserver/lease_clerk.h
        src/nameserver/meta_manager.cpp
        src/nameserver/meta_manager.h
        src/nameserver/meta_scanner.h
        src/nameserver/nameserver.cpp
        src/nameserver/nameserver.h
        src/nameserver/ns_define.h
        src/nameserver/oplog.cpp
        src/nameserver/oplog.h
        src/nameserver/oplog_sync_manager.cpp
        src/nameserver/oplog_sync_manager.h
        src/nameserver/proactor_data_pipe.h
        src/nameserver/redundant.cpp
        src/nameserver/redundant.h
        src/nameserver/replicate.cpp
        src/nameserver/replicate.h
        src/nameserver/scanner_manager.cpp
        src/nameserver/scanner_manager.h
        src/nameserver/server_collect.h
        src/nameserver/service.cpp
        src/nameserver/service.h
        src/nameserver/strategy.cpp
        src/nameserver/strategy.h
        src/tools/adminserver/admintool.cpp
        src/tools/dataserver/clear_file_system.cpp
        src/tools/dataserver/convert_name.cpp
        src/tools/dataserver/ds_client.cpp
        src/tools/dataserver/ds_lib.cpp
        src/tools/dataserver/ds_lib.h
        src/tools/dataserver/ds_task.cpp
        src/tools/dataserver/ds_task.h
        src/tools/dataserver/ds_util.cpp
        src/tools/dataserver/ds_util.h
        src/tools/dataserver/format_file_system.cpp
        src/tools/dataserver/modify_super_block.cpp
        src/tools/dataserver/read_index_tool.cpp
        src/tools/dataserver/read_super_block.cpp
        src/tools/dataserver/reloadconfig.cpp
        src/tools/dataserver/replblk.cpp
        src/tools/dataserver/reverse_name.cpp
        src/tools/dataserver/stat.cpp
        src/tools/dataserver/stat.h
        src/tools/dataserver/tfsping.cpp
        src/tools/nameserver/showssm.cpp
        src/tools/nameserver/showsyncoplog.cpp
        src/tools/nameserver/tfstool.cpp
        tests/batch/test_batch_mix.cpp
        tests/batch/test_batch_read.cpp
        tests/batch/test_batch_write.cpp
        tests/batch/thread.h
        tests/batch/util.cpp
        tests/batch/util.h
        tests/client/test_fsname.cpp
        tests/dataserver/test_bit_map.cpp
        tests/dataserver/test_blockfile_format.cpp
        tests/dataserver/test_blockfile_manager.cpp
        tests/dataserver/test_data_handle.cpp
        tests/dataserver/test_file_op.cpp
        tests/dataserver/test_index_handle.cpp
        tests/dataserver/test_logic_block.cpp
        tests/dataserver/test_logic_block_and_compact.cpp
        tests/dataserver/test_meta.cpp
        tests/dataserver/test_mmap_file.cpp
        tests/dataserver/test_mmap_file_op.cpp
        tests/dataserver/test_mmap_function.cpp
        tests/dataserver/test_physical_block.cpp
        tests/dataserver/test_superblock_impl.cpp
        tests/intergrate/tfs_ioapi_cases.cpp
        tests/intergrate/tfs_ioapi_cases.h)

add_executable(annotated_tfs ${SOURCE_FILES})